# tcc

SQL/: TCC.sql  indexes.sql  (+1 more)
rust/actix/: Cargo.toml  Dockerfile
rust/actix/src/: main.rs
rust/actix/src/common/: mod.rs
rust/actix/src/common/errors/: base.rs  internal_server.rs  mod.rs  not_found.rs  response.rs  unauthorized.rs
rust/actix/src/common/helper/: mod.rs  permission.rs  remove_accents.rs
rust/actix/src/common/messages/: error.rs
rust/actix/src/common/middleware/: mod.rs  roles_permitted_middleware.rs
rust/actix/src/common/validator/: mod.rs
rust/actix/src/database/: mod.rs
rust/actix/src/modules/account/: controller.rs  module.rs  service.rs
rust/actix/src/modules/address/: controller.rs  module.rs  repository.rs
rust/actix/src/modules/admin/: controller.rs  mod.rs  module.rs
rust/actix/src/modules/auth/: controller.rs  mod.rs  module.rs  service.rs
rust/actix/src/modules/branch/: controller.rs  entity.rs  module.rs
rust/actix/src/modules/client/: controller.rs  entity.rs  mod.rs  module.rs
rust/actix/src/modules/manager/: entity.rs
rust/actix/src/modules/transaction/: controller.rs  entity.rs  mod.rs  module.rs  repository.rs  service.rs
rust/axum/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
rust/axum/src/: main.rs  mod.rs
rust/axum/src/common/: mod.rs
rust/axum/src/common/enums/: role.rs
rust/axum/src/common/errors/: bad_request.rs  base.rs  response.rs
rust/axum/src/common/helper/: bcrypt.rs  clean_digits.rs  jwt.rs
rust/axum/src/database/: connect.rs
rust/axum/src/modules/: mod.rs
(+846 files in other folders)
