[package]
name = "tcc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-rt = "2.9.0"
chrono = {version = "0.4.40", features = ["serde"]}
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.4", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "runtime-async-std-native-tls", "bigdecimal" ] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = {version = "1.16.0", features = ["serde"]}
once_cell = "1.21.3"
validator = { version = "0.20.0", features = ["derive"] }
cpf = "0.3.3"
unidecode = "0.3.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
bigdecimal = { version = "0.4.0", features = ["serde"] }
num-traits = "0.2.19"
futures = "0.3.30"