[package]
name = "tcc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = {version = "0.4.40", features = ["serde"]}
dotenvy = "0.15.7"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "runtime-async-std-native-tls" ] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = {version = "1.16.0", features = ["serde"]}
